# uratt

./: .gitmodules  README.md
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
firmware/esp32/main/: display_task.c  display_task.h  net_mqtt.c  net_mqtt.h  net_task.h  system_task.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  acl.c  acl.h  beep_task.c  config.c  config.h  console.c  console.h  display_lvgl.c  display_lvgl.h  display_task.c  display_task.h  door_task.c  esp_lcd_panel_st7735.c  esp_lcd_panel_st7735.h  https.c  https.h  lcd_st7735.c  lcd_st7735.h  lvgl_demo_ui.c  main.c  main_task.c  main_task.h  net_certs.c  net_certs.h  net_https.c  net_https.h  net_mqtt.c  net_ota.c  net_sntp.c  net_task.c  net_task.h  rfid_task.c  rfid_task.h  spiflash.c  system_task.c  ui_access.h  ui_idle.h  ui_splash.c  (+1 more)
firmware/main/net/: https.c  https.h  net_certs.c  net_certs.h  net_https.c  net_https.h  net_mqtt.c  net_mqtt.h  net_ota.c  net_sntp.c  net_sntp.h  net_task.c  net_task.h
firmware/main/system/: gpio_map.h  spiflash.c  spiflash.h  system.h  system_task.c  system_task.h
firmware/main/ui/: beep_task.c  beep_task.h  display_lvgl.c  display_lvgl.h  display_task.c  display_task.h  ui_access.c  ui_blank.c  ui_blank.h  ui_idle.c  ui_idle.h  ui_info.c  ui_info.h  ui_ota.c  ui_ota.h  ui_sleep.c  ui_sleep.h  ui_splash.c  ui_splash.h
firmware/main/ui/fonts/: sleep_28.c
firmware/main/ui/images/: makeit_logo.c  ratt_head.c  ratt_logo.c  rfid_tag.c  wifi_0.c  wifi_1.c  wifi_2.c  wifi_3.c  wifi_4.c
simulator/: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  main.c
simulator/ui_wrapper/: ui  ui_wrapper.c  ui_wrapper.h
